--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <title>Prashant Saran Singh</title>
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://github.com/thanhtuanle939">
+  <meta property="og:url" content="https://github.com/prashantsaran">
   <meta property="og:title" content="Prashant Saran Singh | Web Developer">
 
 
